--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -11,3 +11,10 @@ library
   exposed-modules:     Gameboy.Cpu
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
+
+executable emulator
+  hs-source-dirs:      emulator
+  main-is:             Emulator.hs
+  build-depends:       base >= 4 && < 5, gb, sdl2 >= 1.3
+  default-language:    Haskell2010
+  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
