--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -1,4 +1,4 @@
-name:                gb
+name:                gameboy
 version:             0.1.0.0
 author:              kyren
 maintainer:          kerriganw@gmail.com
@@ -7,14 +7,14 @@ cabal-version:       >= 1.10
 
 library
   hs-source-dirs:      lib
-  build-depends:       base >= 4 && < 5
-  exposed-modules:     Gameboy.Cpu
+  build-depends:       base >= 4 && < 5, vector >= 0.10
+  exposed-modules:     Gameboy.Cpu, Gameboy.Screen
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
 
 executable emulator
   hs-source-dirs:      emulator
   main-is:             Emulator.hs
-  build-depends:       base >= 4 && < 5, gb, sdl2 >= 1.3
+  build-depends:       base >= 4 && < 5, gameboy, sdl2 >= 1.3
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
