--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -8,13 +8,13 @@ cabal-version:       >= 1.10
 library
   hs-source-dirs:      lib
   build-depends:       base >= 4 && < 5, vector >= 0.10
-  exposed-modules:     Gameboy.Cpu, Gameboy.Screen
+  exposed-modules:     Gameboy.CPU, Gameboy.Memory, Gameboy.Screen
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
+  ghc-options:         -Wall -fwarn-incomplete-patterns
 
 executable emulator
   hs-source-dirs:      emulator
   main-is:             Emulator.hs
   build-depends:       base >= 4 && < 5, gameboy, sdl2 >= 1.3
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns -fno-warn-name-shadowing
+  ghc-options:         -Wall -fwarn-incomplete-patterns
