--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -7,7 +7,7 @@ cabal-version:       >= 1.10
 
 library
   hs-source-dirs:      lib
-  build-depends:       base >= 4 && < 5, vector >= 0.10, mtl >= 2.2
+  build-depends:       base >= 4 && < 5, vector >= 0.10
   exposed-modules:     Gameboy.CPU, Gameboy.Memory, Gameboy.Screen
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
