--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -8,7 +8,7 @@ cabal-version:       >= 1.10
 library
   hs-source-dirs:      lib
   build-depends:       base >= 4 && < 5, vector >= 0.10, transformers >= 0.4
-  exposed-modules:     Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen
+  exposed-modules:     Gameboy.CPU, Gameboy.Emulation, Gameboy.Screen, Gameboy.SimpleState
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
