--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -7,14 +7,22 @@ cabal-version:       >= 1.10
 
 library
   hs-source-dirs:      lib
-  build-depends:       base >= 4 && < 5, vector >= 0.10, transformers >= 0.4, parsec >= 3.1
-  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Screen, Gameboy.SimpleState
+  build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.4, parsec >= 3.1
+  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.SimpleState
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
 executable emulator
   hs-source-dirs:      emulator
   main-is:             Emulator.hs
-  build-depends:       base >= 4 && < 5, gameboy, sdl2 >= 1.3
+  build-depends:       base == 4.*, sdl2 >= 1.3, gameboy
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  hs-source-dirs: test
+  main-is: Spec.hs
+  build-depends: base == 4.*, hspec >= 2.0, gameboy
+  default-language:    Haskell2010
+  ghc-options: -Wall -fwarn-incomplete-patterns
