--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -23,6 +23,6 @@ test-suite spec
   type: exitcode-stdio-1.0
   hs-source-dirs: test
   main-is: Spec.hs
-  build-depends: base == 4.*, hspec >= 2.0, gameboy
+  build-depends: base == 4.*, hspec >= 2.0, heredoc >= 0.2, gameboy
   default-language:    Haskell2010
   ghc-options: -Wall -fwarn-incomplete-patterns
