--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -22,7 +22,7 @@ executable emulator
 
 test-suite spec
   type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
+  hs-source-dirs:      spec
   main-is:             Spec.hs
   build-depends:       base == 4.*, transformers >= 0.4, hspec >= 2.0, QuickCheck >= 2.4, heredoc >= 0.2, gameboy
   default-language:    Haskell2010
