--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -1,4 +1,4 @@
-name:                gameboy
+name:                hsgb
 version:             0.1.0.0
 author:              kyren
 maintainer:          kerriganw@gmail.com
@@ -16,7 +16,7 @@ library
 executable emulator
   hs-source-dirs:      emulator
   main-is:             Emulator.hs
-  build-depends:       base == 4.*, sdl2 >= 1.3, gameboy
+  build-depends:       base == 4.*, sdl2 >= 1.3, hsgb
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
@@ -24,6 +24,6 @@ test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      spec
   main-is:             Spec.hs
-  build-depends:       base == 4.*, transformers >= 0.4, hspec >= 2.0, QuickCheck >= 2.4, heredoc >= 0.2, gameboy
+  build-depends:       base == 4.*, transformers >= 0.4, hspec >= 2.0, QuickCheck >= 2.4, heredoc >= 0.2, hsgb
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
