--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -24,6 +24,7 @@ test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      spec
   main-is:             Spec.hs
+  other-modules:       ProgramSpec, Gameboy.AssemblerSpec, Gameboy.InstructionSpec
   build-depends:       base == 4.*, transformers >= 0.3, hspec >= 2.0, QuickCheck >= 2.4, heredoc >= 0.2, hsgb
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
