--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -9,7 +9,7 @@ cabal-version:       >= 1.10
 library
   hs-source-dirs:      lib
   build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.3, parsec >= 3.1
-  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
+  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.TestState, Gameboy.Util
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
