--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -8,8 +8,8 @@ cabal-version:       >= 1.10
 
 library
   hs-source-dirs:      lib
-  build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.3, parsec >= 3.1
-  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.TestState, Gameboy.Util
+  build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.3, parsec >= 3.1, JuicyPixels >= 3.2, bytestring >= 0.9
+  exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
