--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -20,6 +20,13 @@ executable emulator
   default-language:    Haskell2010
   ghc-options:         -Wall -fwarn-incomplete-patterns
 
+executable testrom
+  hs-source-dirs:      testrom
+  main-is:             TestRom.hs
+  build-depends:       base == 4.*, bytestring >= 0.9, hsgb
+  default-language:    Haskell2010
+  ghc-options:         -Wall -fwarn-incomplete-patterns
+
 test-suite spec
   type:                exitcode-stdio-1.0
   hs-source-dirs:      spec
