--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -11,21 +11,21 @@ library
   build-depends:       base == 4.*, vector >= 0.10, transformers >= 0.3, parsec >= 3.1, JuicyPixels >= 3.2, bytestring >= 0.9
   exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
 
 executable emulator
   hs-source-dirs:      emulator
   main-is:             Emulator.hs
   build-depends:       base == 4.*, sdl2 >= 1.3, hsgb
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
 
 executable testrom
   hs-source-dirs:      testrom
   main-is:             TestRom.hs
   build-depends:       base == 4.*, bytestring >= 0.9, hsgb
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
 
 test-suite spec
   type:                exitcode-stdio-1.0
@@ -34,4 +34,4 @@ test-suite spec
   other-modules:       ProgramSpec, Gameboy.AssemblerSpec, Gameboy.InstructionSpec
   build-depends:       base == 4.*, transformers >= 0.3, hspec >= 2.0, QuickCheck >= 2.4, heredoc >= 0.2, hsgb
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
