--- a/hsgb.cabal
+++ b/hsgb.cabal
@@ -11,14 +11,14 @@ library
   build-depends:       base, vector, transformers, parsec, JuicyPixels, bytestring
   exposed-modules:     Gameboy.Assembler, Gameboy.CPU, Gameboy.Emulation, Gameboy.Instructions, Gameboy.Screen, Gameboy.TestState, Gameboy.Util
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns -O2
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
 
 executable testrom
   hs-source-dirs:      testrom
   main-is:             TestRom.hs
   build-depends:       base, bytestring, hsgb
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns -O2
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
 
 test-suite spec
   type:                exitcode-stdio-1.0
@@ -27,4 +27,4 @@ test-suite spec
   other-modules:       ProgramSpec, Gameboy.AssemblerSpec, Gameboy.InstructionSpec
   build-depends:       base, transformers, hspec, QuickCheck, heredoc, hsgb
   default-language:    Haskell2010
-  ghc-options:         -Wall -fwarn-incomplete-patterns -O2
+  ghc-options:         -Wall -fwarn-incomplete-patterns -O2 -funbox-strict-fields
