--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,4 @@
 flags: {}
 packages:
 - '.'
-- location:
-    git: https://github.com/tejon/sdl2.git
-    commit: 344807d2ea4d7ff5830f632800f26ba6f84baa13
-resolver: nightly-2016-07-02
+resolver: lts-8.11
